# stock-scanner-poc

./: CLAUDE.md  README.md  pyproject.toml
configs/: cluster_small.yaml  default_screen.yaml
docs/: blueprint.html
scripts/: run_cluster.sh  run_local.sh
src/: __init__.py  cli.py
src/cluster/: __init__.py  autoscaler.py  manager.py  state.py
src/config/: __init__.py  models.py  schema.py
src/indicators/: __init__.py  base.py  bollinger.py  macd.py  moving_avg.py  rsi.py
src/infra/: __init__.py  aws.py  bootstrap.py  provider.py
src/pipeline/: __init__.py  compute.py  dag.py  fetch.py  ingest.py  screen.py
stock_screener.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py
tests/test_config/: test_models.py  test_schema.py
tests/test_indicators/: test_bollinger.py  test_macd.py  test_moving_avg.py  test_rsi.py
tests/test_infra/: test_aws.py  test_bootstrap.py
tests/test_pipeline/: test_dag.py  test_fetch.py  test_screen.py
